--- a/index.html
+++ b/index.html
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="cesar ezequiel monachesi">
-    <meta name="keywords" content="temporizadorjs, temporaziadorBOM, temporizador">
-    <meta name="description" content="se crea un temporizador utilizando BOM">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="cesar ezequiel monachesi" />
+    <meta
+      name="keywords"
+      content="temporizadorjs, temporaziadorBOM, temporizador"
+    />
+    <meta name="description" content="se crea un temporizador utilizando BOM" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Temporizador</title>
-</head>
-<body>
-    <header></header>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-dark bg-black navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand fw-semibold" href="/index.html"
+            >Temporizador</a
+          >
+        </div>
+      </nav>
+    </header>
     <main>
-        <section class="container">
-            <h1>Temporizador</h1>
-            <h3 id="temporizador"></h3>
-            <button type="button" class="btn btn-danger"></button>
-        </section>
+      <section class="container mt-5">
+        <h1 class="text-center">Temporizador</h1>
+        <h3 class="text-center" id="temporizador"></h3>
+        <article class="text-center">
+          <button type="button" class="btn btn-danger" id="iniciar">
+            Iniciar
+          </button>
+          <button type="button" class="btn btn-danger" id="iniciar">
+            Pausar
+          </button>
+          <button type="button" class="btn btn-danger" id="iniciar">
+            Reiniciar
+          </button>
+        </article>
+      </section>
     </main>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <footer class="bg-dark text-bg-secondary py-3">
+      <section class="container">
+        <p class="text-center">&copy; Todos los derechos reservados</p>
+      </section>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
