corregido link readme netlify

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <input class="mt-2 mt-md-none" type="number" id="segundos" placeholder="Segundos">
             <button type="submit" class="btn btn-success mt-2 mt-md-none">Enviar</button>
         </form>
-        <h1 class="text-center my-3 display-1" id="temporizador"></h1>
-        <article class="text-center">
+        <h1 class="text-center my-3 display-1" id="temporizador"        <article class="text-center">
           <button type="button" class="btn btn-danger" id="iniciar">
             Iniciar
           </button>
